<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/dark_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterance" />
        <TextView
            android:textSize="12sp"
            android:textColor="@color/dark_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/enterance_name" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_alignParentBottom="true"
        android:textSize="12sp"
        android:textColor="@color/text_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:text="@string/enterance_under" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@+id/version"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/btn_sign_in" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sign_in"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="@string/btn_register" />
    </LinearLayout>
</RelativeLayout>